# dicegame

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Game.hpp  Makefile  Player.hpp  Playerlist.hpp  README.md  button.hpp  dicegame  main.cpp  player.hpp  playerlist.hpp  scene.hpp
imgui/: CmakeLists.txt
modellen/: dicegametool.simp  dicegametool.simp.bak  usecases.md
